--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jrqTQJVEqvHRTf8XUWssprz6hyXLKLovVFw35sQ7duc=
 APP_DEBUG=true
 APP_URL=http://localhost
 URL_REGISTRO_PERSONAS=http://localhost:4020
 USUARIOS_API_BASE=http://localhost:4010
-USUARIOS_API_PROYECTO_CLAVE='!!!!CLAVE_DEL_PROYECTO!!!!'
+USUARIOS_API_PROYECTO_CLAVE='talleres'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE='!!!!PLACEHOLDER!!!!'
+DB_DATABASE='proyecto_talleres'
 DB_USERNAME=root
 DB_PASSWORD=
 
